feat: split analytics overview endpoints
