# src/main/java/com/airs/backend/user/entity/CampusAdminStatus.java
@@ -1,0 +1,7 @@
+package com.airs.backend.user.entity;
+
+public enum CampusAdminStatus {
+    PENDING,
+    APPROVED,
+    REJECTED
+}
